@@ -12,6 +12,8 @@ ikiwiki (3.20120204) UNRELEASED; urgency=low
   * meta: Support keywords header. Closes: #664780
     Thanks, Martin Michlmayr
   * passwordauth: Fix url in password recovery email to be absolute.
+  * httpauth: When it's the only auth method, avoid a pointless and
+    confusing signin form, and just right to the httpauthurl.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 21 Mar 2012 14:33:14 -0400
 
